--- a/_pages/join-us.html
+++ b/_pages/join-us.html
@@ -24,7 +24,7 @@ permalink: /pages/join-us/
 
 <hr>
 
-<h3>Graduate Research Assistants (Spring 2026 and Fall 2026)</h3>
+<h3>Graduate Research Assistants (2 positions)</h3>
 <p>We are actively recruiting graduate students for funded research opportunities starting Spring or Fall 2026. Projects span:</p>
 
 <ul>
