--- a/_pages/join-us.html
+++ b/_pages/join-us.html
@@ -4,85 +4,78 @@ title: "Join Us"
 permalink: /pages/join-us/
 ---
 
-<h2>Join CARISET</h2>
-<p><em>The Center for Advanced Research in Intelligent Systems and Emerging Technologies</em><br>
-<strong>University of Texas at Tyler</strong></p>
+<div style="padding-left: 2rem; padding-right: 2rem;">
 
-<p>We are building a dynamic, interdisciplinary team focused on cutting-edge research in AI, embedded systems, cybersecurity, large language models, and quantum-inspired computing. Students and researchers interested in joining CARISET are encouraged to reach out with a CV and brief statement of interest.</p>
+  <h2>Join CARISET</h2>
+  <p><em>The Center for Advanced Research in Intelligent Systems and Emerging Technologies</em><br>
+  <strong>University of Texas at Tyler</strong></p>
 
-<hr>
+  <p>We are building a dynamic, interdisciplinary team focused on cutting-edge research in AI, embedded systems, cybersecurity, large language models, and quantum-inspired computing. Students and researchers interested in joining CARISET are encouraged to reach out with a CV and brief statement of interest.</p>
 
-<h3>Postdoctoral Researcher (1 Position)</h3>
-<p>We are hiring a highly motivated postdoc to contribute to ongoing research in <strong>embedded AI</strong>, <strong>federated learning</strong>, or <strong>quantum-inspired computing</strong>. Candidates with a background in computer engineering, electrical engineering, machine learning, or related fields are encouraged to apply.</p>
+  <hr>
 
-<ul>
-  <li><strong>Start date:</strong> Flexible</li>
-  <li><strong>Location:</strong> UT Tyler campus (hybrid options possible)</li>
-</ul>
+  <h3>Postdoctoral Researcher (1 Position)</h3>
+  <p>We are hiring a highly motivated postdoc to contribute to ongoing research in <strong>embedded AI</strong>, <strong>federated learning</strong>, or <strong>quantum-inspired computing</strong>. Candidates with a background in computer engineering, electrical engineering, machine learning, or related fields are encouraged to apply.</p>
+  <ul>
+    <li><strong>Start date:</strong> Flexible</li>
+    <li><strong>Location:</strong> UT Tyler campus, with possible hybrid options.</li>
+  </ul>
+  <p><strong>To apply:</strong><br>
+  Email <strong>Dr. Frederic Rizk</strong> with your CV, a short research statement, and the contact info of three references.</p>
 
-<p><strong>To apply:</strong> Email Dr. Frederic Rizk with your CV, a short research statement, and the contact info of three references.</p>
+  <hr>
 
-<hr>
+  <h3>Graduate Research Assistants (Spring 2026 and Fall 2026)</h3>
+  <p>We are actively recruiting <strong>graduate students</strong> for funded research opportunities starting Spring or Fall 2026. Projects span:</p>
+  <ul>
+    <li>Federated learning for autonomous systems</li>
+    <li>Robust AI for cyber-physical infrastructure</li>
+    <li>Domain-aware LLM deployment</li>
+    <li>Embedded AI and energy-efficient systems</li>
+    <li>Quantum-enhanced computing</li>
+  </ul>
 
-<h3>Graduate Research Assistants (2 positions)</h3>
-<p>We are actively recruiting graduate students for funded research opportunities starting Spring or Fall 2026. Projects span:</p>
+  <p>Students should apply to <strong>MSEE (Electrical Engineering)</strong> or <strong>MSCS (Computer Science)</strong> programs and contact Dr. Rizk with:</p>
+  <ul>
+    <li>A CV</li>
+    <li>Unofficial transcript</li>
+    <li>A short statement of research interests</li>
+  </ul>
 
-<ul>
-  <li>Federated learning for autonomous systems</li>
-  <li>Robust AI for cyber-physical infrastructure</li>
-  <li>Domain-aware LLM deployment</li>
-  <li>Embedded AI and energy-efficient systems</li>
-  <li>Quantum-enhanced computing</li>
-</ul>
+  <p><em>Prior experience with programming, embedded systems, or ML is helpful but not required.</em></p>
 
-<p>Students should apply to <strong>MSEE (Electrical Engineering)</strong> or <strong>MSCS (Computer Science)</strong> programs and contact Dr. Rizk with:</p>
+  <hr>
 
-<ul>
-  <li>A CV</li>
-  <li>Unofficial transcript</li>
-  <li>A short statement of research interests</li>
-</ul>
+  <h3>Undergraduate Researchers (Open Positions)</h3>
+  <p>We welcome <strong>motivated undergraduate students</strong> to join our lab through research-for-credit, summer internships, or volunteer projects. Whether you’re exploring AI and hardware research for the first time or preparing for grad school, CARISET offers flexible, hands-on opportunities.</p>
 
-<p>Prior experience with programming, embedded systems, or ML is helpful but not required.</p>
+  <p><strong>Ideal candidates:</strong><br>
+  Students in <strong>ECE, CS, or related fields</strong> who are curious, reliable, and eager to learn.</p>
 
-<hr>
+  <p><strong>Topics include:</strong><br>
+  Edge computing, privacy-preserving AI, machine learning, quantum-inspired algorithms, and more.</p>
 
-<h3>Undergraduate Researchers (Open Positions)</h3>
-<p>We welcome motivated undergraduate students to join our lab through research-for-credit, summer internships, or volunteer projects. Whether you're exploring AI and hardware research for the first time or preparing for grad school, CARISET offers flexible, hands-on opportunities.</p>
+  <p><strong>To get started:</strong> email Dr. Rizk with a short message about your interests and your current resume.</p>
 
-<p><strong>Ideal candidates:</strong> Students in <em>ECE, CS, or related fields</em> who are curious, reliable, and eager to learn.</p>
+  <hr>
 
-<p><strong>Topics include:</strong></p>
-<ul>
-  <li>Edge computing</li>
-  <li>Privacy-preserving AI</li>
-  <li>Machine learning</li>
-  <li>Quantum-inspired algorithms</li>
-</ul>
+  <h3>Outreach & Mentorship</h3>
+  <p>CARISET is committed to mentoring the next generation of engineers and scientists. We are always looking to engage with:</p>
+  <ul>
+    <li>Local <strong>high school students</strong></li>
+    <li><strong>Community college transfers</strong></li>
+    <li>Participants in <strong>summer research camps</strong> and <strong>K–12 outreach</strong></li>
+  </ul>
+  <p>If you’re an educator or student interested in STEM collaboration, please reach out!</p>
 
-<p><strong>To get started:</strong> Email Dr. Rizk with a short message about your interests and your current resume.</p>
+  <hr>
 
-<hr>
+  <h3>Contact</h3>
+  <p>📧 <strong>Email:</strong> <a href="mailto:frizk@uttyler.edu">frizk@uttyler.edu</a><br>
+     📍 <strong>Location:</strong> RBN Building, University of Texas at Tyler</p>
 
-<h3>Outreach & Mentorship</h3>
-<p>CARISET is committed to mentoring the next generation of engineers and scientists. We are always looking to engage with:</p>
+  <hr>
 
-<ul>
-  <li>Local high school students</li>
-  <li>Community college transfers</li>
-  <li>Participants in summer research camps and K–12 outreach</li>
-</ul>
+  <blockquote><em>CARISET aims to push the boundaries of intelligent systems while preparing students to lead in a rapidly evolving technological world.</em></blockquote>
 
-<p>If you're an educator or student interested in STEM collaboration, please reach out!</p>
-
-<hr>
-
-<h3>Contact</h3>
-<ul>
-  <li>📧 <strong>Email:</strong> <a href="mailto:frizk@uttyler.edu">frizk@uttyler.edu</a></li>
-  <li>📍 <strong>Location:</strong> RBN Building, University of Texas at Tyler</li>
-</ul>
-
-<blockquote>
-  <em>CARISET aims to push the boundaries of intelligent systems while preparing students to lead in a rapidly evolving technological world.</em>
-</blockquote>
+</div>
