--- a/_pages/join-us.html
+++ b/_pages/join-us.html
@@ -4,7 +4,7 @@ title: "Join Us"
 permalink: /pages/join-us/
 ---
 
-<div style="padding-left: 12rem; padding-right: 12rem;">
+<div style="padding-left: 50rem; padding-right: 50rem;">
 
   <h2>Join CARISET</h2>
   <p><em>The Center for Advanced Research in Intelligent Systems and Emerging Technologies</em><br>
@@ -25,7 +25,7 @@ permalink: /pages/join-us/
 
   <hr>
 
-  <h3>Graduate Research Assistants (Spring 2026 and Fall 2026)</h3>
+  <h3>Graduate Research Assistants (2 positions)</h3>
   <p>We are actively recruiting <strong>graduate students</strong> for funded research opportunities starting Spring or Fall 2026. Projects span:</p>
   <ul>
     <li>Federated learning for autonomous systems</li>
