--- a/_pages/join-us.html
+++ b/_pages/join-us.html
@@ -1,42 +1,103 @@
 ---
-layout: page
-title: "Join Us"
-permalink: /pages/join-us/
+permalink: /join-us/
+title: Join Us – Opportunities at CARISET
+excerpt: "Positions for Postdoctoral, Graduate, and Undergraduate Researchers"
 ---
 
 <div style="padding-left: 25rem; padding-right: 20rem;">
   <section id="join-us">
-    <h2>Join Us</h2>
 
-    <h3>Postdoctoral Researcher (1 position)</h3>
+    <h1>🚀 Join CARISET</h1>
     <p>
-      The CARISET lab is recruiting a highly motivated postdoc in AI, Machine Learning, and Quantum Computing.
-      Candidates with backgrounds in distributed systems, security, physical unclonable functions (PUFs),
-      or related areas are encouraged to apply. <br>
-      <strong>Start Date:</strong> Fall 2026 <br>
-      Interested candidates should email Prof. [Your Name] with:
+      At the <strong>Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)</strong>, 
+      we are building a team of passionate researchers to advance the frontiers of 
+      <strong>Artificial Intelligence, Distributed Systems, Hardware Security (PUFs), and Quantum Computing</strong>.
+    </p>
+    <p>
+      If you are motivated, curious, and eager to contribute to cutting-edge research, 
+      we encourage you to apply for one of our open positions.
+    </p>
+
+    <hr>
+
+    <h2>📌 Open Positions</h2>
+
+    <h3>Postdoctoral Researcher (1 position, starting Fall 2026)</h3>
+    <p>
+      CARISET is seeking a highly motivated postdoctoral researcher to work on 
+      <strong>hardware-based security (PUFs), AI-driven security frameworks, and AI + Quantum integration</strong>. 
+      Candidates with expertise in one or more of the following areas are encouraged to apply:
     </p>
     <ul>
-      <li>CV</li>
+      <li>Artificial Intelligence & Machine Learning</li>
+      <li>Distributed & Secure Computing</li>
+      <li>Hardware-based Security and PUFs</li>
+      <li>Quantum Computing & Quantum AI</li>
+    </ul>
+    <p><strong>Application:</strong> Interested candidates should email 
+      <strong>Dr. Frederic Rizk</strong> at 
+      <a href="mailto:frizk@uttyler.edu">frizk@uttyler.edu</a> with the following:
+    </p>
+    <ul>
+      <li>Curriculum Vitae (CV)</li>
       <li>Brief statement of research interests</li>
       <li>Contact information for three references</li>
     </ul>
 
-    <h3>Graduate Research Assistants (2 positions)</h3>
+    <hr>
+
+    <h3>Graduate Research Assistants (2 positions, starting Fall 2025)</h3>
     <p>
-      We are recruiting graduate students to join the lab starting Fall 2025. 
-      Interested students should contact Prof. [Your Name] with their CV and transcript.
-      Prospective students should also apply to the Computer Engineering or Computer Science graduate
-      programs through the university’s graduate school portal.
+      We are recruiting <strong>two graduate research assistants</strong> to join the group starting Fall 2025. 
+      Current and prospective graduate students are welcome to apply. Research areas include:
     </p>
+    <ul>
+      <li>AI and Deep Learning</li>
+      <li>Distributed and Cloud Computing</li>
+      <li>Quantum Computing & Integration with AI</li>
+      <li>Cybersecurity & Privacy</li>
+    </ul>
+    <p><strong>Requirements:</strong></p>
+    <ul>
+      <li>Strong background in computer science, computer engineering, or related field</li>
+      <li>Experience in programming (Python, C/C++, or similar) is preferred but not required</li>
+    </ul>
+    <p>
+      <strong>Application:</strong> Current and prospective students should contact 
+      <strong>Dr. Frederic Rizk</strong> with a CV and transcript to discuss opportunities. 
+      Prospective students should also apply to the 
+      <strong>Computer Science or Computer Engineering graduate programs</strong> through the 
+      <a href="https://www.uttyler.edu/graduate/" target="_blank">UT Tyler Graduate School</a>.
+    </p>
+
+    <hr>
 
     <h3>Undergraduate Researchers (Open Positions)</h3>
     <p>
-      We welcome motivated undergraduate students from all backgrounds. Whether you're exploring AI and
-      emerging technologies for the first time or preparing for graduate school, our lab offers flexible
-      opportunities to get involved (research credits or internships). No prior experience is required.
-      Contact Prof. [Your Name] to learn more.
+      We welcome motivated undergraduate students from all levels and backgrounds. 
+      Whether you are exploring research for the first time or preparing for graduate school, 
+      CARISET provides hands-on opportunities to learn and contribute. Areas of involvement include:
     </p>
+    <ul>
+      <li>Undergraduate research projects (CS/ENGR 4315 or equivalent)</li>
+      <li>Thesis and capstone projects</li>
+      <li>Summer research internships</li>
+    </ul>
+    <p>
+      No prior research experience is required. 
+      If you’re interested, contact <strong>Dr. Frederic Rizk</strong> at 
+      <a href="mailto:frizk@uttyler.edu">frizk@uttyler.edu</a>.
+    </p>
+
+    <hr>
+
+    <h2>✨ Why Join CARISET?</h2>
+    <ul>
+      <li>Collaborate on <strong>cutting-edge projects</strong> at the intersection of AI, security, and quantum computing</li>
+      <li>Gain <strong>hands-on experience</strong> with advanced computing and security systems</li>
+      <li>Work in a supportive, interdisciplinary research environment</li>
+      <li>Opportunities to <strong>publish in top venues</strong> and present at international conferences</li>
+    </ul>
+
   </section>
 </div>
-
