--- a/_pages/join-us.html
+++ b/_pages/join-us.html
@@ -1,5 +1,5 @@
 ---
-permalink: /join-us/
+permalink: /pages/join-us/
 title: Join Us – Opportunities at CARISET
 excerpt: "Positions for Postdoctoral, Graduate, and Undergraduate Researchers"
 ---
