--- a/_pages/join-us.html
+++ b/_pages/join-us.html
@@ -4,10 +4,10 @@ title: Join Us – Opportunities at CARISET
 excerpt: "Positions for Postdoctoral, Graduate, and Undergraduate Researchers"
 ---
 
-<div style="padding-left: 25rem; padding-right: 20rem;">
+<div style="padding-left: 15rem; padding-right: 10rem;">
   <section id="join-us">
 
-    <h1>🚀 Join CARISET</h1>
+    <h1> Join CARISET</h1>
     <p>
       At the <strong>Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)</strong>, 
       we are building a team of passionate researchers to advance the frontiers of 
@@ -20,7 +20,7 @@ excerpt: "Positions for Postdoctoral, Graduate, and Undergraduate Researchers"
 
     <hr>
 
-    <h2>📌 Open Positions</h2>
+    <h2> Open Positions</h2>
 
     <h3>Postdoctoral Researcher (1 position, starting Fall 2026)</h3>
     <p>
@@ -91,7 +91,7 @@ excerpt: "Positions for Postdoctoral, Graduate, and Undergraduate Researchers"
 
     <hr>
 
-    <h2>✨ Why Join CARISET?</h2>
+    <h2> Why Join CARISET?</h2>
     <ul>
       <li>Collaborate on <strong>cutting-edge projects</strong> at the intersection of AI, security, and quantum computing</li>
       <li>Gain <strong>hands-on experience</strong> with advanced computing and security systems</li>
