--- a/_pages/join-us.html
+++ b/_pages/join-us.html
@@ -4,7 +4,7 @@ title: Join Us – Opportunities at CARISET
 excerpt: "Positions for Postdoctoral, Graduate, and Undergraduate Researchers"
 ---
 
-<div style="padding-left: 15rem; padding-right: 10rem;">
+<div style="padding-left: 10rem; padding-right: 5rem;">
   <section id="join-us">
 
     <h1> Join CARISET</h1>
@@ -64,10 +64,11 @@ excerpt: "Positions for Postdoctoral, Graduate, and Undergraduate Researchers"
     </ul>
     <p>
       <strong>Application:</strong> Current and prospective students should contact 
-      <strong>Dr. Frederic Rizk</strong> with a CV and transcript to discuss opportunities. 
+      <strong>Dr. Frederic Rizk</strong> at 
+      <a href="mailto:frizk@uttyler.edu">frizk@uttyler.edu</a> with a CV and transcript to discuss opportunities. 
       Prospective students should also apply to the 
-      <strong>Computer Science or Computer Engineering graduate programs</strong> through the 
-      <a href="https://www.uttyler.edu/graduate/" target="_blank">UT Tyler Graduate School</a>.
+      <strong>Computer Science or Electrical Engineering graduate programs</strong> through the 
+      <a href="https://www.uttyler.edu/admissions-aid/graduate/admission-requirements" target="_blank"> UT Tyler Graduate School application portal</a>.
     </p>
 
     <hr>
