--- a/_pages/join-us.html
+++ b/_pages/join-us.html
@@ -4,101 +4,78 @@ title: Join Us – Opportunities at CARISET
 excerpt: "Positions for Postdoctoral, Graduate, and Undergraduate Researchers"
 ---
 
-<div style="padding-left: 10rem; padding-right: 5rem;">
-  <section id="join-us">
+<section id="join-us">
 
-    <h1> Join CARISET</h1>
-    <p>
-      At the <strong>Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)</strong>, 
-      we are building a team of passionate researchers to advance the frontiers of 
-      <strong>Artificial Intelligence, Distributed Systems, Hardware Security (PUFs), and Quantum Computing</strong>.
-    </p>
-    <p>
-      If you are motivated, curious, and eager to contribute to cutting-edge research, 
-      we encourage you to apply for one of our open positions.
-    </p>
+## Join CARISET
 
-    <hr>
+At the **Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)**, we are building a team of passionate researchers to advance the frontiers of **Artificial Intelligence, Distributed Systems, Hardware Security (PUFs), and Quantum Computing**.
 
-    <h2> Open Positions</h2>
+If you are motivated, curious, and eager to contribute to cutting-edge research, we encourage you to apply for one of our open positions.
 
-    <h3>Postdoctoral Researcher (1 position, starting Fall 2026)</h3>
-    <p>
-      CARISET is seeking a highly motivated postdoctoral researcher to work on 
-      <strong>hardware-based security (PUFs), AI-driven security frameworks, and AI + Quantum integration</strong>. 
-      Candidates with expertise in one or more of the following areas are encouraged to apply:
-    </p>
-    <ul>
-      <li>Artificial Intelligence & Machine Learning</li>
-      <li>Distributed & Secure Computing</li>
-      <li>Hardware-based Security and PUFs</li>
-      <li>Quantum Computing & Quantum AI</li>
-    </ul>
-    <p><strong>Application:</strong> Interested candidates should email 
-      <strong>Dr. Frederic Rizk</strong> at 
-      <a href="mailto:frizk@uttyler.edu">frizk@uttyler.edu</a> with the following:
-    </p>
-    <ul>
-      <li>Curriculum Vitae (CV)</li>
-      <li>Brief statement of research interests</li>
-      <li>Contact information for three references</li>
-    </ul>
+---
 
-    <hr>
+## Open Positions
 
-    <h3>Graduate Research Assistants (2 positions, starting Fall 2025)</h3>
-    <p>
-      We are recruiting <strong>two graduate research assistants</strong> to join the group starting Fall 2025. 
-      Current and prospective graduate students are welcome to apply. Research areas include:
-    </p>
-    <ul>
-      <li>AI and Deep Learning</li>
-      <li>Distributed and Cloud Computing</li>
-      <li>Quantum Computing & Integration with AI</li>
-      <li>Cybersecurity & Privacy</li>
-    </ul>
-    <p><strong>Requirements:</strong></p>
-    <ul>
-      <li>Strong background in computer science, computer engineering, or related field</li>
-      <li>Experience in programming (Python, C/C++, or similar) is preferred but not required</li>
-    </ul>
-    <p>
-      <strong>Application:</strong> Current and prospective students should contact 
-      <strong>Dr. Frederic Rizk</strong> at 
-      <a href="mailto:frizk@uttyler.edu">frizk@uttyler.edu</a> with a CV and transcript to discuss opportunities. 
-      Prospective students should also apply to the 
-      <strong>Computer Science or Electrical Engineering graduate programs</strong> through the 
-      <a href="https://www.uttyler.edu/admissions-aid/graduate/admission-requirements" target="_blank"> UT Tyler Graduate School application portal</a>.
-    </p>
+###  Postdoctoral Researcher  
+**1 position, starting Fall 2026**
 
-    <hr>
+CARISET is seeking a highly motivated postdoctoral researcher to work on **hardware-based security (PUFs), AI-driven security frameworks, and AI + Quantum integration**.
 
-    <h3>Undergraduate Researchers (Open Positions)</h3>
-    <p>
-      We welcome motivated undergraduate students from all levels and backgrounds. 
-      Whether you are exploring research for the first time or preparing for graduate school, 
-      CARISET provides hands-on opportunities to learn and contribute. Areas of involvement include:
-    </p>
-    <ul>
-      <li>Undergraduate research projects (CS/ENGR 4315 or equivalent)</li>
-      <li>Thesis and capstone projects</li>
-      <li>Summer research internships</li>
-    </ul>
-    <p>
-      No prior research experience is required. 
-      If you’re interested, contact <strong>Dr. Frederic Rizk</strong> at 
-      <a href="mailto:frizk@uttyler.edu">frizk@uttyler.edu</a>.
-    </p>
+**Areas of expertise (preferred):**
+- Artificial Intelligence & Machine Learning  
+- Distributed & Secure Computing  
+- Hardware-based Security and PUFs  
+- Quantum Computing & Quantum AI  
 
-    <hr>
+**Application:**  
+Interested candidates should email **Dr. Frederic Rizk** at [frizk@uttyler.edu](mailto:frizk@uttyler.edu) with the following:
+- Curriculum Vitae (CV)  
+- Brief statement of research interests  
+- Contact information for three references
 
-    <h2> Why Join CARISET?</h2>
-    <ul>
-      <li>Collaborate on <strong>cutting-edge projects</strong> at the intersection of AI, security, and quantum computing</li>
-      <li>Gain <strong>hands-on experience</strong> with advanced computing and security systems</li>
-      <li>Work in a supportive, interdisciplinary research environment</li>
-      <li>Opportunities to <strong>publish in top venues</strong> and present at international conferences</li>
-    </ul>
+---
 
-  </section>
-</div>
+###  Graduate Research Assistants  
+**2 positions, starting Fall 2025**
+
+We are recruiting two graduate research assistants to join the group starting Fall 2025. Current and prospective graduate students are welcome to apply.
+
+**Research areas include:**
+- AI and Deep Learning  
+- Distributed and Cloud Computing  
+- Quantum Computing & Integration with AI  
+- Cybersecurity & Privacy  
+
+**Requirements:**
+- Strong background in computer science, computer engineering, or related field  
+- Experience in programming (Python, C/C++, or similar) is preferred but not required  
+
+**Application:**  
+Current and prospective students should contact **Dr. Frederic Rizk** at [frizk@uttyler.edu](mailto:frizk@uttyler.edu) with a CV and transcript to discuss opportunities.  
+Prospective students should also apply to the **Computer Science or Electrical Engineering graduate programs** through the [UT Tyler Graduate School application portal](https://www.uttyler.edu/admissions-aid/graduate/admission-requirements).
+
+---
+
+###  Undergraduate Researchers  
+**Open Positions**
+
+We welcome motivated undergraduate students from all levels and backgrounds. Whether you are exploring research for the first time or preparing for graduate school, CARISET provides hands-on opportunities to learn and contribute.
+
+**Opportunities include:**
+- Undergraduate research projects (CS/ENGR 4315 or equivalent)  
+- Thesis and capstone projects  
+- Summer research internships  
+
+No prior research experience is required.  
+If you’re interested, contact **Dr. Frederic Rizk** at [frizk@uttyler.edu](mailto:frizk@uttyler.edu).
+
+---
+
+## Why Join CARISET?
+
+- Collaborate on **cutting-edge projects** at the intersection of AI, security, and quantum computing  
+- Gain **hands-on experience** with advanced computing and security systems  
+- Work in a supportive, interdisciplinary research environment  
+- Opportunities to **publish in top venues** and present at international conferences  
+
+</section>
