--- a/_pages/join-us.html
+++ b/_pages/join-us.html
@@ -80,7 +80,7 @@ excerpt: "Positions for Postdoctoral, Graduate, and Undergraduate Researchers"
       CARISET provides hands-on opportunities to learn and contribute. Areas of involvement include:
     </p>
     <ul>
-      <li>Undergraduate research projects (CS/ENGR 4315 or equivalent)</li>
+      <li>Undergraduate research projects (CMPE4395 or equivalent)</li>
       <li>Thesis and capstone projects</li>
       <li>Summer research internships</li>
     </ul>
