--- a/_pages/people.html
+++ b/_pages/people.html
@@ -1,5 +1,5 @@
 ---
-permalink: /people/
+permalink: /pages/people/
 title: Meet Our Team – CARISET
 excerpt: "Our dedicated research team at the Center for Advanced Research in Intelligent Systems and Emerging Technologies"
 ---
