--- a/_pages/people.html
+++ b/_pages/people.html
@@ -4,7 +4,7 @@ title: Meet Our Team – CARISET
 excerpt: "Our dedicated research team at the Center for Advanced Research in Intelligent Systems and Emerging Technologies"
 ---
 
-<div style="padding-left: 25rem; padding-right: 20rem;">
+<div style="padding-left: 7rem;">
 
   <h1>👩‍💻 Meet Our Team</h1>
 
