--- a/_pages/people.html
+++ b/_pages/people.html
@@ -6,83 +6,90 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 
 <div style="padding-left: 3rem;">
 
-  <h1>👩‍💻 Meet Our Team</h1>
+<h1>Meet the Team</h1>
 
-  <!-- Principal Investigator -->
-  <section style="display: flex; align-items: flex-start; margin-bottom: 2rem;">
-    <img src="../images/frederic-rizk.jpg" alt="Dr. Frederic Rizk" style="width: 150px; height: 150px; border-radius: 50%; margin-right: 2rem;">
-    <div>
-      <h2>Principal Investigator</h2>
-      <p><strong>Dr. Frederic Rizk</strong><br>
-      Assistant Professor, Department of Computer Science & Engineering, UT Tyler</p>
-      <p>
-        Expertise: Artificial Intelligence, Distributed Systems, Hardware Security (PUFs), and Quantum Computing.  
-        Dr. Rizk leads CARISET with a vision to advance intelligent systems and emerging technologies 
-        through interdisciplinary research and collaborative innovation.
-      </p>
-    </div>
-  </section>
+<hr>
 
-  <hr>
+<h2>Principal Investigator</h2>
 
-  <!-- Postdoctoral Researcher -->
-  <section style="display: flex; align-items: flex-start; margin-bottom: 2rem;">
-    <img src="../images/postdoc-placeholder.jpg" alt="Postdoc Position" style="width: 150px; height: 150px; border-radius: 50%; margin-right: 2rem; opacity: 0.7;">
-    <div>
-      <h2>Postdoctoral Researcher</h2>
-      <p><em>Could this be you?</em></p>
-      <p>
-        We are recruiting a postdoctoral researcher (starting Fall 2026) in hardware-based security, 
-        AI-driven frameworks, and AI + Quantum integration.  
-        <a href="/join-us/">Learn more and apply →</a>
-      </p>
-    </div>
-  </section>
+<table>
+  <tr>
+    <td style="width: 150px; vertical-align: top;">
+      <img src="../images/pic-pi.jpg" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
+    </td>
+    <td style="vertical-align: top; padding-left: 20px;">
+      <strong>[Full Name]</strong><br>
+      Assistant Professor, Computer Science and Engineering<br>
+      The University of Texas at Tyler<br><br>
+      [Enter a short professional bio here. Focus on research interests, academic background, and lab leadership.]
+    </td>
+  </tr>
+</table>
 
-  <hr>
+<hr>
 
-  <!-- Graduate Research Assistants -->
-  <h2>Graduate Research Assistants</h2>
+<h2>Postdoctoral Researcher</h2>
 
-  <section style="display: flex; align-items: flex-start; margin-bottom: 2rem;">
-    <img src="../images/ra1.jpg" alt="Graduate Research Assistant 1" style="width: 150px; height: 150px; border-radius: 50%; margin-right: 2rem;">
-    <div>
-      <p><strong>[Name of RA #1]</strong><br>
-      Graduate Research Assistant, Computer Science & Engineering</p>
-      <p>
-        Research interests: Artificial Intelligence, Distributed Computing, and Cybersecurity.  
-        Passionate about developing secure, scalable AI frameworks to address real-world challenges.
-      </p>
-    </div>
-  </section>
+<table>
+  <tr>
+    <td style="width: 150px; vertical-align: top;">
+      <img src="../images/postdoc.jpg" alt="Postdoctoral Researcher" style="width: 100%; border-radius: 8px;">
+    </td>
+    <td style="vertical-align: top; padding-left: 20px;">
+      <strong>[Full Name]</strong><br>
+      Postdoctoral Fellow, CARISET Lab<br><br>
+      [Enter a brief bio here. Example: Works on interdisciplinary research involving AI, cybersecurity, and systems engineering.]
+    </td>
+  </tr>
+</table>
 
-  <section style="display: flex; align-items: flex-start; margin-bottom: 2rem;">
-    <img src="../images/ra2.jpg" alt="Graduate Research Assistant 2" style="width: 150px; height: 150px; border-radius: 50%; margin-right: 2rem;">
-    <div>
-      <p><strong>[Name of RA #2]</strong><br>
-      Graduate Research Assistant, Computer Science & Engineering</p>
-      <p>
-        Research interests: Quantum Computing, AI Integration, and Privacy-preserving Machine Learning.  
-        Excited to explore next-generation intelligent systems.
-      </p>
-    </div>
-  </section>
+<hr>
 
-  <hr>
+<h2>Graduate Research Assistants</h2>
 
-  <!-- Undergraduate Researchers -->
-  <h2>Undergraduate Researchers</h2>
+<table>
+  <tr>
+    <td style="width: 150px; vertical-align: top;">
+      <img src="../images/ra1.jpg" alt="Graduate Research Assistant 1" style="width: 100%; border-radius: 8px;">
+    </td>
+    <td style="vertical-align: top; padding-left: 20px;">
+      <strong>[Full Name]</strong><br>
+      M.S. Student, Computer Science<br><br>
+      [Write a short bio here. Example: Specializes in machine learning applications for distributed systems and cybersecurity.]
+    </td>
+  </tr>
+</table>
 
-  <section style="display: flex; align-items: flex-start; margin-bottom: 2rem;">
-    <img src="../images/ug1.jpg" alt="Undergraduate Researcher" style="width: 150px; height: 150px; border-radius: 50%; margin-right: 2rem;">
-    <div>
-      <p><strong>[Name of Undergraduate]</strong><br>
-      Undergraduate Student, Computer Science</p>
-      <p>
-        Interested in applying machine learning and cybersecurity concepts to real-world problems.  
-        Actively involved in undergraduate research projects and capstone development.
-      </p>
-    </div>
-  </section>
+<br>
+
+<table>
+  <tr>
+    <td style="width: 150px; vertical-align: top;">
+      <img src="../images/ra2.jpg" alt="Graduate Research Assistant 2" style="width: 100%; border-radius: 8px;">
+    </td>
+    <td style="vertical-align: top; padding-left: 20px;">
+      <strong>[Full Name]</strong><br>
+      M.S. Student, Computer Science<br><br>
+      [Write a short bio here. Example: Works on AI-driven optimization techniques and real-time decision-making frameworks.]
+    </td>
+  </tr>
+</table>
+
+<hr>
+
+<h2>Undergraduate Researcher</h2>
+
+<table>
+  <tr>
+    <td style="width: 150px; vertical-align: top;">
+      <img src="../images/undergrad.jpg" alt="Undergraduate Researcher" style="width: 100%; border-radius: 8px;">
+    </td>
+    <td style="vertical-align: top; padding-left: 20px;">
+      <strong>[Full Name]</strong><br>
+      Undergraduate Student, Computer Science<br><br>
+      [Write a short description. Example: Assists with data preparation, front-end development, and AI model evaluation.]
+    </td>
+  </tr>
+</table>
 
 </div>
