--- a/_pages/people.html
+++ b/_pages/people.html
@@ -15,13 +15,20 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 <table>
   <tr>
     <td style="width: 150px; vertical-align: top;">
-      <img src="../images/pic-pi.jpg" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
+      <img src="../images/pi.jpg" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
     </td>
     <td style="vertical-align: top; padding-left: 20px;">
-      <strong>[Full Name]</strong><br>
-      Assistant Professor, Computer Science and Engineering<br>
+
+      <strong>Dr. Frederic Rizk</strong><br>
+      Assistant Professor, Electrical and Computer Engineering<br>
+      Director, CARISET Lab<br>
       The University of Texas at Tyler<br><br>
-      [Enter a short professional bio here. Focus on research interests, academic background, and lab leadership.]
+
+      Dr. Rizk leads the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET) at UT Tyler. His research lies at the intersection of artificial intelligence, hardware security, and emerging technologies, with a focus on AI-powered hardware-software co-design, physical unclonable functions (PUFs), and deep learning systems. 
+
+      He holds M.S. and Ph.D. degrees in Computer Engineering from the University of Louisiana at Lafayette, and a Bachelor of Engineering from Notre Dame University, graduating Summa Cum Laude. He has served as a research scientist and postdoctoral fellow, contributing to high-impact projects across academia and industry.
+
+      Dr. Rizk is a recipient of the prestigious UT System Rising STARs Award and is a member of IEEE, ACM, and the Order of the Engineer.
     </td>
   </tr>
 </table>
