--- a/_pages/people.html
+++ b/_pages/people.html
@@ -15,7 +15,7 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 <table>
   <tr>
     <td style="width: 150px; vertical-align: top;">
-      <img src="../images/pi.jpg" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
+      <img src="../images/pic-pi.jpg" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
     </td>
     <td style="vertical-align: top; padding-left: 20px;">
 
