--- a/_pages/people.html
+++ b/_pages/people.html
@@ -15,20 +15,23 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 <table>
   <tr>
     <td style="width: 150px; vertical-align: top;">
-      <img src="../images/pic-pi.jpg" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
+      <img src="../images/pic-pi.jpeg" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
     </td>
     <td style="vertical-align: top; padding-left: 20px;">
-
       <strong>Dr. Frederic Rizk</strong><br>
       Assistant Professor, Electrical and Computer Engineering<br>
       Director, CARISET Lab<br>
       The University of Texas at Tyler<br><br>
 
-      Dr. Rizk leads the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET) at UT Tyler. His research lies at the intersection of artificial intelligence, hardware security, and emerging technologies, with a focus on AI-powered hardware-software co-design, physical unclonable functions (PUFs), and deep learning systems. 
-
-      He holds M.S. and Ph.D. degrees in Computer Engineering from the University of Louisiana at Lafayette, and a Bachelor of Engineering from Notre Dame University, graduating Summa Cum Laude. He has served as a research scientist and postdoctoral fellow, contributing to high-impact projects across academia and industry.
-
-      Dr. Rizk is a recipient of the prestigious UT System Rising STARs Award and is a member of IEEE, ACM, and the Order of the Engineer.
+      <ul style="margin-top: 0;">
+        <li>Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET).</li>
+        <li>Research focus: AI, hardware security, physical unclonable functions (PUFs), deep learning, and hardware-software co-design.</li>
+        <li>Holds Ph.D. and M.S. degrees in Computer Engineering from the University of Louisiana at Lafayette.</li>
+        <li>Earned B.E. in Computer and Communication Engineering from Notre Dame University, graduating Summa Cum Laude.</li>
+        <li>Previously served as a research scientist and postdoctoral fellow at the Informatics Research Institute, University of Louisiana at Lafayette.</li>
+        <li>Recipient of the UT System <strong>Rising STARs Award</strong>.</li>
+        <li>Member of IEEE, ACM, and Phi Kappa Phi.</li>
+      </ul>
     </td>
   </tr>
 </table>
