--- a/_pages/people.html
+++ b/_pages/people.html
@@ -47,7 +47,7 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
     <td style="vertical-align: top; padding-left: 20px;">
       <strong>[Full Name]</strong><br>
       Postdoctoral Fellow, CARISET Lab<br><br>
-      [Enter a brief bio here. Example: Works on interdisciplinary research involving AI, cybersecurity, and systems engineering.]
+      [Enter a brief bio here.]
     </td>
   </tr>
 </table>
@@ -63,8 +63,8 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
     </td>
     <td style="vertical-align: top; padding-left: 20px;">
       <strong>[Full Name]</strong><br>
-      M.S. Student, Computer Science<br><br>
-      [Write a short bio here. Example: Specializes in machine learning applications for distributed systems and cybersecurity.]
+      M.S. Student, [Major]<br><br>
+      [Write a short bio here.]
     </td>
   </tr>
 </table>
@@ -78,8 +78,8 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
     </td>
     <td style="vertical-align: top; padding-left: 20px;">
       <strong>[Full Name]</strong><br>
-      M.S. Student, Computer Science<br><br>
-      [Write a short bio here. Example: Works on AI-driven optimization techniques and real-time decision-making frameworks.]
+      M.S. Student, [Major]<br><br>
+      [Write a short bio here.]
     </td>
   </tr>
 </table>
@@ -95,8 +95,8 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
     </td>
     <td style="vertical-align: top; padding-left: 20px;">
       <strong>[Full Name]</strong><br>
-      Undergraduate Student, Computer Science<br><br>
-      [Write a short description. Example: Assists with data preparation, front-end development, and AI model evaluation.]
+      Undergraduate Student, [Major]<br><br>
+      [Write a short description.]
     </td>
   </tr>
 </table>
