--- a/_pages/people.html
+++ b/_pages/people.html
@@ -6,7 +6,6 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 
 <div style="padding-left: 3rem;">
 
-
 <hr>
 
 <h1>Principal Investigator</h1>
@@ -14,7 +13,7 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 <table>
   <tr>
     <td style="width: 150px; vertical-align: top;">
-      <img src="/images/pic-pi.png" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
+      <img src="{{ '/images/pic-pi.png' | relative_url }}" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
     </td>
     <td style="vertical-align: top; padding-left: 20px;">
       <strong>Dr. Frederic Rizk</strong><br>
@@ -23,13 +22,13 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
       The University of Texas at Tyler<br><br>
 
       <ul style="margin-top: 0;">
-        <li>Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET).</li>
-        <li>Research focus: AI, hardware security, physical unclonable functions (PUFs), deep learning, and hardware-software co-design.</li>
-        <li>Holds Ph.D. and M.S. degrees in Computer Engineering from the University of Louisiana at Lafayette.</li>
-        <li>Earned B.E. in Computer and Communication Engineering from Notre Dame University, graduating Summa Cum Laude.</li>
-        <li>Previously served as a research scientist and postdoctoral fellow at the Informatics Research Institute, University of Louisiana at Lafayette.</li>
-        <li>Recipient of the UT System <strong>Rising STARs Award</strong>.</li>
-        <li>Member of IEEE, ACM, and Phi Kappa Phi.</li>
+        <li>Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)</li>
+        <li>Research areas: AI, hardware security, PUFs, deep learning, and hardware-software co-design</li>
+        <li>Ph.D. and M.S. in Computer Engineering – University of Louisiana at Lafayette</li>
+        <li>B.E. in Computer and Communication Engineering – Notre Dame University (Summa Cum Laude)</li>
+        <li>Former postdoc and research scientist – Informatics Research Institute</li>
+        <li>Recipient of the UT System <strong>Rising STARs Award</strong></li>
+        <li>Member of IEEE, ACM, and Phi Kappa Phi</li>
       </ul>
     </td>
   </tr>
@@ -42,7 +41,7 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 <table>
   <tr>
     <td style="width: 150px; vertical-align: top;">
-      <img src="../images/postdoc.jpg" alt="Postdoctoral Researcher" style="width: 100%; border-radius: 8px;">
+      <img src="{{ '/images/postdoc.jpg' | relative_url }}" alt="Postdoctoral Researcher" style="width: 100%; border-radius: 8px;">
     </td>
     <td style="vertical-align: top; padding-left: 20px;">
       <strong>[Full Name]</strong><br>
@@ -59,7 +58,7 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 <table>
   <tr>
     <td style="width: 150px; vertical-align: top;">
-      <img src="../images/ra1.jpg" alt="Graduate Research Assistant 1" style="width: 100%; border-radius: 8px;">
+      <img src="{{ '/images/ra1.jpg' | relative_url }}" alt="Graduate Research Assistant 1" style="width: 100%; border-radius: 8px;">
     </td>
     <td style="vertical-align: top; padding-left: 20px;">
       <strong>[Full Name]</strong><br>
@@ -74,7 +73,7 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 <table>
   <tr>
     <td style="width: 150px; vertical-align: top;">
-      <img src="../images/ra2.jpg" alt="Graduate Research Assistant 2" style="width: 100%; border-radius: 8px;">
+      <img src="{{ '/images/ra2.jpg' | relative_url }}" alt="Graduate Research Assistant 2" style="width: 100%; border-radius: 8px;">
     </td>
     <td style="vertical-align: top; padding-left: 20px;">
       <strong>[Full Name]</strong><br>
@@ -91,7 +90,7 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 <table>
   <tr>
     <td style="width: 150px; vertical-align: top;">
-      <img src="../images/undergrad.jpg" alt="Undergraduate Researcher" style="width: 100%; border-radius: 8px;">
+      <img src="{{ '/images/undergrad.jpg' | relative_url }}" alt="Undergraduate Researcher" style="width: 100%; border-radius: 8px;">
     </td>
     <td style="vertical-align: top; padding-left: 20px;">
       <strong>[Full Name]</strong><br>
