--- a/_pages/people.html
+++ b/_pages/people.html
@@ -13,7 +13,7 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 <table>
   <tr>
     <td style="width: 150px; vertical-align: top;">
-      <img src="{{ '/images/pic-pi.png' | relative_url }}" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
+      <img src="{{ '/images/pic-pi.jpeg' | relative_url }}" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
     </td>
     <td style="vertical-align: top; padding-left: 20px;">
       <strong>Dr. Frederic Rizk</strong><br>
@@ -23,12 +23,12 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 
       <ul style="margin-top: 0;">
         <li>Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)</li>
-        <li>Research areas: AI, hardware security, PUFs, deep learning, and hardware-software co-design</li>
-        <li>Ph.D. and M.S. in Computer Engineering – University of Louisiana at Lafayette</li>
-        <li>B.E. in Computer and Communication Engineering – Notre Dame University (Summa Cum Laude)</li>
-        <li>Former postdoc and research scientist – Informatics Research Institute</li>
-        <li>Recipient of the UT System <strong>Rising STARs Award</strong></li>
-        <li>Member of IEEE, ACM, and Phi Kappa Phi</li>
+        <li>Research areas: AI, hardware security, PUFs, deep learning, hardware-software co-design</li>
+        <li>Ph.D. and M.S., Computer Engineering – University of Louisiana at Lafayette</li>
+        <li>B.E., Computer & Communication Engineering – Notre Dame University | Summa Cum Laude</li>
+        <li>Former Postdoc & Research Scientist – Informatics Research Institute</li>
+        <li>Awards: UT System <strong>Rising STARs</strong>, President’s Award for Excellence</li>
+        <li>Professional Memberships: IEEE, ACM, Phi Kappa Phi</li>
       </ul>
     </td>
   </tr>
