--- a/_pages/people.html
+++ b/_pages/people.html
@@ -8,31 +8,32 @@ excerpt: "Our dedicated research team at the Center for Advanced Research in Int
 
 <hr>
 
-<h1>Principal Investigator</h1>
+<div style="max-width: 1000px; margin: 0 auto; padding: 1rem;">
 
-<table>
-  <tr>
-    <td style="width: 150px; vertical-align: top;">
-      <img src="{{ '/images/pic-pi.jpeg' | relative_url }}" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
-    </td>
-    <td style="vertical-align: top; padding-left: 20px;">
-      <strong>Dr. Frederic Rizk</strong><br>
-      Assistant Professor, Electrical and Computer Engineering<br>
-      Director, CARISET Lab<br>
-      The University of Texas at Tyler<br><br>
+  <table style="width: 100%; border: 1px solid #ccc; border-radius: 8px; padding: 1rem;">
+    <tr>
+      <td style="width: 180px; vertical-align: top; padding: 1rem;">
+        <img src="{{ '/images/pic-pi.jpeg' | relative_url }}" alt="Principal Investigator" style="width: 100%; border-radius: 8px;">
+      </td>
+      <td style="vertical-align: top; padding: 1rem;">
+        <strong style="font-size: 1.2rem;">Dr. Frederic Rizk</strong><br>
+        Assistant Professor, Electrical and Computer Engineering &nbsp; | &nbsp; The University of Texas at Tyler<br>
+        Director, CARISET Lab<br><br>
 
-      <ul style="margin-top: 0;">
-        <li>Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)</li>
-        <li>Research areas: AI, hardware security, PUFs, deep learning, hardware-software co-design</li>
-        <li>Ph.D. and M.S., Computer Engineering – University of Louisiana at Lafayette</li>
-        <li>B.E., Computer & Communication Engineering – Notre Dame University | Summa Cum Laude</li>
-        <li>Former Postdoc & Research Scientist – Informatics Research Institute</li>
-        <li>Awards: UT System <strong>Rising STARs</strong>, President’s Award for Excellence</li>
-        <li>Professional Memberships: IEEE, ACM, Phi Kappa Phi</li>
-      </ul>
-    </td>
-  </tr>
-</table>
+        <ul style="margin-top: 0;">
+          <li>Director of the Center for Advanced Research in Intelligent Systems and Emerging Technologies (CARISET)</li>
+          <li>Research areas: AI, hardware security, PUFs, deep learning, hardware-software co-design</li>
+          <li>Ph.D. and M.S., Computer Engineering – University of Louisiana at Lafayette</li>
+          <li>B.E., Computer & Communication Engineering – Notre Dame University | Summa Cum Laude</li>
+          <li>Former Postdoc & Research Scientist – Informatics Research Institute</li>
+          <li>Awards: UT System <strong>Rising STARs</strong>, President’s Award for Excellence</li>
+          <li>Professional Memberships: IEEE, ACM, Phi Kappa Phi</li>
+        </ul>
+      </td>
+    </tr>
+  </table>
+
+</div>
 
 <hr>
 
